--- a/client/app/foto/foto.component.html
+++ b/client/app/foto/foto.component.html
@@ -1,6 +1,7 @@
-<img class="img-responsive center-block" src="{{url}}" [alt]="title">
+<img class="img-responsive center-block efeito" src="{{url}}" [alt]="titulo">
 
 <!--
+    Modelo para a view
     src="{{url}}" maneira que é feita no angular 1'
     [alt]="title" maneira que pode ser feita no angular 2
     ambos sao aceitos no angular 2
